# toaster

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: DEPLOY.md
examples/: make_sample.py
tests/: conftest.py  test_annotation_history.py  test_apairo_channel.py  test_api.py  test_architecture.py  test_controller.py  test_grouping.py  test_io.py  test_label_schema.py  test_persistence.py  test_point_cloud.py  test_segment.py  test_selection.py  test_viewer_headless.py
toaster/: __init__.py  __main__.py  builtin_schemas.py  cli.py  desktop.py
toaster/api/: __init__.py  app.py  serialize.py  server.py  service.py
toaster/app/: __init__.py  controller.py  main_window.py  run.py  schema_loader.py
toaster/app/panels/: __init__.py  class_palette.py  display_panel.py  groups_panel.py  layers_panel.py  segmenter_panel.py
toaster/core/: __init__.py  annotation.py  grouping.py  label_schema.py  point_cloud.py  selection.py  session.py  types.py
toaster/interaction/: __init__.py  controller.py  snapshot.py
toaster/io/: __init__.py  apairo_dataset.py  apairo_loader.py  base.py  bin_loader.py  las_loader.py  npy_loader.py  open3d_loader.py  pcd_loader.py  ply_loader.py
toaster/persistence/: __init__.py  label_store.py  schema_store.py  session_store.py
toaster/schemas/: default.yaml
toaster/segment/: __init__.py  base.py  cluster.py  dbscan.py  ground.py  hdbscan.py  model.py
toaster/viewer/: __init__.py  base.py  colormap.py  null_viewer.py  pyvista_viewer.py
toaster/web/: index.html  style.css
toaster/web/js/: api.js  app.js  colors.js  viewer.js
