[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toaster"
version = "0.1.0"
description = "Annotate lidar point clouds in 3D, with pluggable clustering/segmentation models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Augustin Bresset", email = "augustin.bresset@gmail.com" }]
keywords = ["lidar", "point-cloud", "annotation", "segmentation", "clustering"]
dependencies = [
    "numpy",
    "PyYAML",
    "scikit-learn>=1.3",
    "laspy",
    "plyfile",
    "fastapi",
    "uvicorn[standard]",
    "pywebview",
    # Webview host for the desktop window. On Linux this uses QtWebEngine; for a
    # fully Qt-free host install system WebKitGTK and drop this.
    "PySide6",
]

[project.optional-dependencies]
apairo = ["apairo @ git+https://github.com/apairo-robotics/apairo.git"]
open3d = ["open3d"]
hdbscan = ["hdbscan"]
csf = ["cloth-simulation-filter"]  # CSF ground-detection segmenter
models = ["onnxruntime-gpu"]
torch = ["torch"]
viewer3d = ["pyvista"]  # legacy VTK Viewer backend (toaster.viewer.PyVistaViewer)
dev = ["pytest", "ruff", "httpx", "playwright"]  # playwright: `playwright install chromium`

[project.scripts]
toaster = "toaster.desktop:main"
toaster-web = "toaster.api.server:main"

[project.urls]
Homepage = "https://github.com/augustin-b/toaster"

[tool.setuptools.packages.find]
where = ["."]
include = ["toaster*"]

[tool.setuptools.package-data]
toaster = ["py.typed", "schemas/*.yaml", "web/*.html", "web/*.css", "web/*.svg", "web/*.png", "web/js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
